# OSLabs

./: CMakeLists.txt
lab1/: update.bat  update.sh
lab2/: CMakeLists.txt  background_prog.cpp  background_prog.hpp  error_prog.cpp  long_task.cpp  prog_with_mail.cpp  test.cpp
lab3/: CmakeLists.txt  main.cpp  shared_memory.hpp  task_manager.hpp
lab4/: CMakeLists.txt  thermo_logger.cpp  thermo_logger.hpp  thermometr.cpp
lab5/: CMakeLists.txt  app.js  com.hpp  index.html  main.cpp  server.cpp  simulator.cpp  thermo_logger_with_db.cpp  thermo_logger_with_db.hpp  web.py
lab5/templates/: index.html
lab6/: main.cpp  main_window.cpp  main_window.h  temperature_app.pro  ui_main_window.py
